manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "homepage"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "homepage"
  template:
    metadata:
      labels:
        app: "homepage"
    spec:
      containers:
        - name: "homepage"
          image: "weihanli/homepage"
          ports:
          - containerPort: 80
