manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
  name: homepage
spec:
  rules:
  - host: "home.lemonsharp.top"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: homepage
            port:
              number: 80
